--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Привет</h1>
+<h1>Hello РџСЂРёРІРµС‚</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
