--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <b>A</b>    
             <ul type="disc">     
               <li>
-              <a href="index.html#a">a</a>
+              <a href="#a">a</a>
               </li>    
             </ul>   
             
