--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <br>
     </center>     
       <br>   Начал писать 5 апреля 2011 года.<br>    
-      <br>  Заметки  в web 02.06.2012 года<br>
-     Заметки  в Git 07.12.2014 года <br>     
+      <br>   Заметки  в web 02.06.2012 года<br>
+      <br>   Заметки  в Git 07.12.2014 года <br>     
       <br>
       <br>     
       <br>
