--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>   
   <body bgcolor="#FFE4C4">   
     <center><h1><b>
-          <a name="top"></a>Мои заметки о Linux</b></h1>
+          <a name="top"></a>Заметки о Linux</b></h1>
       <br>     
       <br>
     </center>     
