--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       
     <link rel="stylesheet" href="./linux_files/default.css" type="text/css">
   </head>   
-  <body bgcolor="#FFE4C4">   
+  <body bgcolor="#FFDEAD">   
     <center><h1><b>
           <a name="top"></a>Заметки о Linux</b></h1>
       <br>     
