--- a/index.html
+++ b/index.html
@@ -2307,7 +2307,7 @@ Mar 29 04:06:00 rst CROND[4549]: (user) CMD (/home/user/mail)
           <br>  
           <br>  #iptraf удобный интервес надо устанавливать
           <br>  #iftop -i eth0 надо дополнительно установливать
-          <br>  
+          <br>  # vnstat -l -i eth0
           <br>  
           <br>  
           <br>  
