--- a/index.html
+++ b/index.html
@@ -5853,8 +5853,8 @@ sadf
 
 <br>
 <br>
-<br>При установке debain 8 на raid 10 из дисков 4Tb ошибка установки grub2
-решение
+<br><h1>При установке debain 8 на raid 10 из дисков 4Tb ошибка установки grub2
+решение</h1>
 
 <br>
 root@fwhlin:/mnt# grub-install /dev/sdb
