--- a/index.html
+++ b/index.html
@@ -5972,6 +5972,13 @@ Ubuntu 14.04.2 LTS \n \l
 <br>GSSAPIAuthentication no
 <br>перезапускаем службу
 <br>sudo service ssh restart
+
+<b> Разрешить вход root
+меняем
+FROM:
+PermitRootLogin without-password
+TO:
+PermitRootLogin yes
 <br>
 <br>
 <h1>The End.</h1>
