--- a/index.html
+++ b/index.html
@@ -6022,10 +6022,11 @@ TO:
 PermitRootLogin yes
 <br>
 <br>
-<br>#############
+<br>
 
-Автоматическое подключение монтирование сетевых дисков для АД пользователей
+<h1>Автоматическое подключение монтирование сетевых дисков для АД пользователей</h1>
 
+<br>
 
 
 
@@ -6218,7 +6219,7 @@ apt-get install mysql-client mysql-server
 
 пароль mysql
 
-Qwerty@123
+
 
 
 
