--- a/index.html
+++ b/index.html
@@ -6431,7 +6431,30 @@ Allow from all
 <br>
 <h1>The End.</h1>
 <br>
-
-
+<br><h1>Создать файл размером 100Ьи</h1>
+<br>fallocate -l 100M file.out
 <br> 
+<br>
+<br>
+<br><>
+<br>fallocate -l 100M file.out
+<br>
+<br>
+<br> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </h></tab></body></html>
