--- a/index.html
+++ b/index.html
@@ -5695,7 +5695,7 @@ sudo testdisk
 <br>
 <br>
 <br>
-<br><h>Спящий режим # pm-hibernate
+<br><br>Спящий режим # pm-hibernate
 <br>
 <br>
 <br><h1>Создание загрузочной USB  флешки</h1>
@@ -6014,7 +6014,7 @@ Ubuntu 14.04.2 LTS \n \l
 
 
 
-<b> Разрешить вход root
+<> Разрешить вход root
 меняем
 FROM:
 PermitRootLogin without-password
@@ -6452,14 +6452,106 @@ Allow from all
 <br>tightvncserver -kill :1
 <br>
 <br>
+    <br> <h1> Pfsense</h1>
 <br>
+        <br><h1>Git</h1>
+        Если вы что-то поменяли и вам надо отправить что-то в удлаённый  репозиторий сделайте  в корне локального репозитория три команды: <br>
+        1. ? <br>
+        | click me | click me | <br>
+        | 1 | git add . | <br>
+
+        -- прямо вот так с точкой через пробел, позволит добавить в индекс  репозитория новые файлы, которые вы создали и которых не было в  предыдущей фиксации (коммите) <br>
+        <br>
+        2. ? <br>
+        | click me | click me | <br>
+        | 1 | git commit -m "текст сообщения о том, что вы изменили" | <br>
+        <br>
+        -- очередная фиксация этапа разработки. <br>
+        <br>
+        3. ? <br>
+        | click me | click me | <br>
+        | 1 | git push | <br>
+        <br>
+        -- именно это команда отправит ваши изменения в удалённый репозиторий. <br>
+        <br>
+        <br>
+        Вам надо забрать что-то из внешней репы <br>
+        Если нужно забрать что-то из внешнего репозитория  (например, коллеги  что-то поправили и просят вам подтянуть изменения), то делаем гит пулл (подробности тут): <br>
+        ? <br>
+        | click me | click me | <br>
+        | 1 | git pull | <br>
+        <br>
+        -- это команда подтянет изменения в вашу текущую ветку, из той ветки внешнего репозитория, которая с ней ассоциирована. <br>
+        <br>
+        <br>
+        <br>
+        Имя пользователя <br>
+        $ git config --global user.name "John Doe" <br>
+        $ git config --global user.email johndoe@example.com <br>
+        <br>
+        <br>
+        Проверка настроек <br>
+        $ git config --list <br>
+        $ git config user.name <br>
+        <br>
+        Как получить помощь? <br>
+        $ git help <глагол> <br>
+
+            <br>
+
+            <br>
+            Определение состояния файлов <br>
+            $ git status <br>
+            <br>
+
+            Отслеживание новых файлов <br>
+            $ git add README <br>
+
+            <br>
+
+            Сокращенный вывод статуса <br>
+
+            $ git status -s <br>
+            <br>
+
+
+            Игнорирование файлов <br>
+            $ cat .gitignore <br>
+            *.[oa] <br>
+            *~ <br>
+
+
+            <br>
+            Просмотр индексированных и неиндексированных изменений <br>
+            $ git diff <br>
+            <br>
+            Эта команда сравнивает ваши индексированные изменения с последним коммитом:
+            $ git diff --staged <br>
+
+            <br>
+
+            Коммит изменений <br>
+            $ git commit <br>
+            <br>
+            или <br>
+            $ git commit -m "Story 182: Fix benchmarks for speed" <br>
+            <br>
+            Добавление параметра -a в команду git commit заставляет Git автоматически индексировать каждый уже отслеживаемый на момент коммита файл, позволяя вам обойтись без git add:
+            $ git commit -a -m 'added new benchmarks'
+            <br>
+
+
+            Удаление файлов <br>
+            $ rm PROJECTS.md
+            <br>
+            $ git rm PROJECTS.md
+            <br>
+            это удалить файл из индекса, оставив его при этом в рабочем каталоге. Другими словами, вы можете захотеть оставить файл на жёстком диске, и убрать его из-под бдительного ока  <br>
+            <br>
+            git rm --cached README <br>
+
+<br>test2
+
+            <br>
 <br>
-test
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-</h></tab></body></html>
+</h1></tab></body></html>
