--- a/index.html
+++ b/index.html
@@ -6556,7 +6556,7 @@ Allow from all
             git rm --cached README <br>
 
 <br>test2
-    <a href="http:\\">pyton</a>
+    <a href="http://vosagh82.github.io/python/1.html">pyton</a>
 <br>test3
 <br>test4
   </body>
