--- a/index.html
+++ b/index.html
@@ -6554,10 +6554,17 @@ Allow from all
             это удалить файл из индекса, оставив его при этом в рабочем каталоге. Другими словами, вы можете захотеть оставить файл на жёстком диске, и убрать его из-под бдительного ока  <br>
             <br>
             git rm --cached README <br>
-
-<br>test2
-    <a href="http://vosagh82.github.io/python/1.html">pyton</a>
-<br>test3
+<p>
+    <a href="http://vosagh82.github.io/python/Python_help.html">pyton</a>
+</p>
+    <br>Востановление файлов ext4 c помощью testdisk на lvm
+    <br>   запускаем Сreage журналk
+    <br>   /dev/dm-0 - 48 GB / 45 GiB - Msft Virtual Disk
+    <br>выбирараем
+    <br> >[None   ] Non partitioned media
+    <br>  >[ Advanced ] Filesystem Utils
+    >[  List  ]
+    <br>
 <br>test4
   </body>
 </html>
