--- a/index.html
+++ b/index.html
@@ -6565,6 +6565,6 @@ Allow from all
     <br>  >[ Advanced ] Filesystem Utils
     >[  List  ]
     <br>
-<br>test4
+<br><a href="http://vosagh82.github.io/zabbix/zabbix_redmi.html">zabbix</a>
   </body>
 </html>
