--- a/index.html
+++ b/index.html
@@ -1276,9 +1276,9 @@
           <br>  groupmod -A millerd interiotech Добавляет пользователя Mut@NT в группу ITShaman (SuSE);
           <br>  userdel millerd Удаление пользователя Mut@NT;
           <br>  groupdel interiotech Удаление группы ITShaman;
-          <br>  Пользователи и группы
+          <br>Пользователи и группы
           <br>  
-          <br>  
+          <br>
           <br>  groupadd group_name
           <br>  создать новую группу с именем group_name
           <br>  groupdel group_name
@@ -1305,8 +1305,8 @@
           <br>  проверяет корректность системных файлов учётных записей. Проверяется файл/etc/group
           <br>  newgrp [-] group_name
           <br>  изменяет первичную группу текущего пользователя. Если указать "-", ситуация будет идентичной той, в которой пользователь вышил из системы и снова вошёл. Если не указывать группу, первичная группа будет назначена из /etc/passwd
-          <br>  
-          <br>  
+          <br> Требование, сменить пароль при первом входе
+          <br>  $ sudo chage -d 0 tost
           <br>  
           <br>  
           <br>  
