--- a/index.html
+++ b/index.html
@@ -6582,5 +6582,8 @@ Allow from all
     >[  List  ]
     <br>
 <br><a href="http://vosagh82.github.io/zabbix/zabbix_redmi.html">zabbix</a>
+  <br>
+  <br><a href="http://vosagh82.github.io/windows/windows.html">windows</a>
+
   </body>
 </html>
