--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,8 @@
           <br>  
           <br>  <h1>!Поиск файлов в linux</h1>
           <br>  
-          <br>  команда 
+          <br>  команда
+          <br>  $find / -iname name_file  Ищет файл name_file в директории в котором не учитывается регистр символов
           <br>  $find / -name name_file  Ищет файл name_file в директории /
           <br>  $find / -name name_file 2&gt; /dev/null Ищет файл и при появлении ошибок их не показывает
           <br>  $find / -name '*name_file*'  Ищет все файлы где в имении файла есть наше название.
