--- a/index.html
+++ b/index.html
@@ -19,8 +19,24 @@
       <br>
       <br>
 
+<p><a href="http://vosagh82.github.io/zabbix/zabbix_redmi.html">zabbix</a>
+</p>
+<p><a href="http://vosagh82.github.io/windows/windows.html">windows</a>
+</p>
+<p><a href="http://vosagh82.github.io/python/Python_help.html">pyton</a>
+</p>
 
 <!--Содержание -->
+
+<p>
+geasdf <br>
+7b27 <br>
+dosfsck <br>
+</p>
+<p>
+  ddsf<br>
+  dsfa<br>
+</p>
 
 
     <!-- Начало справочника -->
@@ -6569,9 +6585,7 @@ Allow from all
     <br> auto eth0
 
 
-    <p>
-    <a href="http://vosagh82.github.io/python/Python_help.html">pyton</a>
-</p>
+
     <br>Востановление файлов ext4 c помощью testdisk на lvm
     <br>   запускаем Сreage журналk
     <br>   /dev/dm-0 - 48 GB / 45 GiB - Msft Virtual Disk
@@ -6582,9 +6596,7 @@ Allow from all
     <br>123
     >[  List  ]
     <br>
-<br><a href="http://vosagh82.github.io/zabbix/zabbix_redmi.html">zabbix</a>
-  <br>
-  <br><a href="http://vosagh82.github.io/windows/windows.html">windows</a>
+
 
   </body>
 </html>
