rm test from index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body bgcolor="#FFDEAD">
     <center><h1><b>
-          <a name="top"></a>Заметки о Linux</b></h1>
+          <a name="top"></a>Заметки</b></h1>
       <br>
       <br>
     </center>
@@ -28,15 +28,7 @@
 
 <!--Содержание -->
 
-<p>
-geasdf <br>
-7b27 <br>
-dosfsck <br>
-</p>
-<p>
-  ddsf<br>
-  dsfa<br>
-</p>
+
 
 
     <!-- Начало справочника -->
