--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <br>   Начал писать 5 апреля 2011 года.<br>
       <br>   Заметки  в web 02.06.2012 года<br>
       <br>   Заметки  в Git 07.12.2014 года <br>
-      <br>
+      <br>   Заметки через Atom 05.01.2021 года 
       <br>
       <br>
 <!--Содержание -->
