--- a/python/Python_help.html
+++ b/python/Python_help.html
@@ -5,7 +5,19 @@
     <title>Title</title>
 </head>
 <body>
-<br>Тест
-<br>Tecт3
+
+
+
+  <h1>!Курс Python SoloLern 01.01.2021</h1>
+
+<p>
+Начал проходить курс по Python чере приложение SoloLern на телефоне.<br>
+Преимеры програм скидываю в каталог SoloLern_lessons<br>
+жызнь 
+</p>
+
+
+
+
 </body>
 </html>
