--- a/python/Python_help.html
+++ b/python/Python_help.html
@@ -11,9 +11,9 @@
   <h1>!Курс Python SoloLern 01.01.2021</h1>
 
 <p>
-Начал проходить курс по Python чере приложение SoloLern на телефоне.<br>
-Преимеры програм скидываю в каталог SoloLern_lessons<br>
-жызнь 
+Начал проходить курс по Python через приложение SoloLern на телефоне.<br>
+Примеры программ скидываю в каталог SoloLern_lessons<br>
+жизнь
 </p>
 
 
