--- a/python/Python_help.html
+++ b/python/Python_help.html
@@ -6,17 +6,10 @@
 </head>
 <body>
 
-
-
-  <h1>!Курс Python SoloLern 01.01.2021</h1>
-
-<p>
-Начал проходить курс по Python через приложение SoloLern на телефоне.<br>
-Примеры программ скидываю в каталог SoloLern_lessons<br>
-жизнь
+<h1>Курс Python SoloLern 01.01.2021</h1>
+<p>Начал проходить курс по Python через приложение SoloLern на телефоне.<br>
+Примеры программ скидываю в каталог SoloLern_lessons.<br>
 </p>
-
-
 
 
 </body>
