--- a/docker/index.html
+++ b/docker/index.html
@@ -1,4 +1,13 @@
-<h1> Комманды docker </p>
+<h1> Комманды docker </h1>
+
+<p>
+Установка Docker
+https://docs.docker.com/engine/install/ubuntu/
+sudo apt-get install     apt-transport-https     ca-certificates     curl     gnupg-agent     software-properties-common
+sudo add-apt-repository    "deb [arch=amd64] https://download.docker.com/linux/ubuntu  $(lsb_release -cs) stable"
+sudo apt-get update
+sudo apt-get install docker-ce docker-ce-cli containerd.io
+</p>
 
 
 
